--- a/src/app/pages/invoice-print/invoice-print.component.html
+++ b/src/app/pages/invoice-print/invoice-print.component.html
@@ -30,7 +30,7 @@
     <thead>
       <tr style="border-bottom: 2px solid #000;">
         <th style="text-align: left; padding: 8px;">Item</th>
-        <th style="text-align: right; padding: 8px;">HRS/QTY</th>
+        <th style="text-align: right; padding: 8px;">QTY</th>
         <th style="text-align: right; padding: 8px;">Rate</th>
         <th style="text-align: right; padding: 8px;">Subtotal</th>
       </tr>
